# codility

./: CMakeLists.txt  tests.cpp
src/: CMakeLists.txt  solution.cpp  solution.hpp
